--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mocha-multi",
+  "name": "@jlowcs/mocha-multi",
   "version": "1.1.6",
   "description": "A bit of a hack to get multiple reporters working with mocha",
   "main": "mocha-multi.js",
